# argmin-exploring

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  rosenbrock_ndarray.rs  rosenbrock_vec.rs
