[package]
name = "argmin-exploring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.6" }
argmin-math = { version = "0.1", features = ["ndarray_v0_15-serde"] }
argmin_testfunctions = "0.1"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
tabled = "0.8"

