[package]
name = "argmin-exploring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.8" }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde"] }
argmin_testfunctions = "0.1"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
tabled = "0.10"
rand = { version = "0.8" }
rand_xoshiro = { version = "0.6" }
